Third commit, saving changes to the notebook. Almost the final version

--- a/student.ipynb
+++ b/student.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Treatment and Analysis\n",
     "\n",
     "As usual, we start by importing the libraries that we are going to use throughout this project and start with the typical data inspection/cleaning/treatment activities. Further on, we will discuss the basic characteristics of our dataset. Lets get to work!"
@@ -239,8 +246,8 @@
     "#Starting by importing all the libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import FunctionTransformer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import matplotlib.pyplot as plt\n",
@@ -558,11 +565,11 @@
        "500.0       209\n",
        "700.0       208\n",
        "          ...  \n",
-       "506.0         1\n",
-       "2120.0        1\n",
-       "2500.0        1\n",
-       "518.0         1\n",
-       "1852.0        1\n",
+       "207.0         1\n",
+       "516.0         1\n",
+       "588.0         1\n",
+       "176.0         1\n",
+       "1275.0        1\n",
        "Name: sqft_basement, Length: 304, dtype: int64"
       ]
      },
@@ -590,11 +597,11 @@
        "500.0       209\n",
        "700.0       208\n",
        "          ...  \n",
-       "1960.0        1\n",
-       "248.0         1\n",
-       "2580.0        1\n",
-       "1245.0        1\n",
-       "704.0         1\n",
+       "4820.0        1\n",
+       "861.0         1\n",
+       "2120.0        1\n",
+       "3500.0        1\n",
+       "1275.0        1\n",
        "Name: sqft_basement, Length: 304, dtype: int64"
       ]
      },
@@ -1321,10 +1328,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>1.565e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 31 Aug 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Thu, 01 Sep 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>07:32:42</td>     <th>  Log-Likelihood:    </th> <td> -22079.</td> \n",
+       "  <th>Time:</th>                 <td>08:26:12</td>     <th>  Log-Likelihood:    </th> <td> -22079.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 19807</td>      <th>  AIC:               </th> <td>4.416e+04</td>\n",
@@ -1373,8 +1380,8 @@
        "Dep. Variable:                outcome   R-squared:                       0.441\n",
        "Model:                            OLS   Adj. R-squared:                  0.441\n",
        "Method:                 Least Squares   F-statistic:                 1.565e+04\n",
-       "Date:                Wed, 31 Aug 2022   Prob (F-statistic):               0.00\n",
-       "Time:                        07:32:42   Log-Likelihood:                -22079.\n",
+       "Date:                Thu, 01 Sep 2022   Prob (F-statistic):               0.00\n",
+       "Time:                        08:26:12   Log-Likelihood:                -22079.\n",
        "No. Observations:               19807   AIC:                         4.416e+04\n",
        "Df Residuals:                   19805   BIC:                         4.418e+04\n",
        "Df Model:                           1                                         \n",
@@ -1468,10 +1475,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   8175.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 31 Aug 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Thu, 01 Sep 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>07:32:43</td>     <th>  Log-Likelihood:    </th> <td> -21886.</td> \n",
+       "  <th>Time:</th>                 <td>08:26:12</td>     <th>  Log-Likelihood:    </th> <td> -21886.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 19807</td>      <th>  AIC:               </th> <td>4.378e+04</td>\n",
@@ -1523,8 +1530,8 @@
        "Dep. Variable:                outcome   R-squared:                       0.452\n",
        "Model:                            OLS   Adj. R-squared:                  0.452\n",
        "Method:                 Least Squares   F-statistic:                     8175.\n",
-       "Date:                Wed, 31 Aug 2022   Prob (F-statistic):               0.00\n",
-       "Time:                        07:32:43   Log-Likelihood:                -21886.\n",
+       "Date:                Thu, 01 Sep 2022   Prob (F-statistic):               0.00\n",
+       "Time:                        08:26:12   Log-Likelihood:                -21886.\n",
        "No. Observations:               19807   AIC:                         4.378e+04\n",
        "Df Residuals:                   19804   BIC:                         4.380e+04\n",
        "Df Model:                           2                                         \n",
@@ -1614,8 +1621,8 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(15,8))\n",
-    "fig = sm.graphics.plot_regress_exog(model, 'sqft_living', fig=fig)\n",
+    "fig = plt.figure(figsize = (15,8))\n",
+    "fig = sm.graphics.plot_regress_exog(model, 'sqft_living', fig = fig)\n",
     "plt.show()"
    ]
   },
@@ -1697,10 +1704,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   426.7</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 31 Aug 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Thu, 01 Sep 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>07:32:46</td>     <th>  Log-Likelihood:    </th> <td> -10640.</td> \n",
+       "  <th>Time:</th>                 <td>08:26:16</td>     <th>  Log-Likelihood:    </th> <td> -10640.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 19807</td>      <th>  AIC:               </th> <td>2.171e+04</td>\n",
@@ -2394,8 +2401,8 @@
        "Dep. Variable:                  price   R-squared:                       0.824\n",
        "Model:                            OLS   Adj. R-squared:                  0.822\n",
        "Method:                 Least Squares   F-statistic:                     426.7\n",
-       "Date:                Wed, 31 Aug 2022   Prob (F-statistic):               0.00\n",
-       "Time:                        07:32:46   Log-Likelihood:                -10640.\n",
+       "Date:                Thu, 01 Sep 2022   Prob (F-statistic):               0.00\n",
+       "Time:                        08:26:16   Log-Likelihood:                -10640.\n",
        "No. Observations:               19807   AIC:                         2.171e+04\n",
        "Df Residuals:                   19591   BIC:                         2.342e+04\n",
        "Df Model:                         215                                         \n",
@@ -2687,10 +2694,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   560.1</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 31 Aug 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Thu, 01 Sep 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>07:32:47</td>     <th>  Log-Likelihood:    </th> <td> -10752.</td> \n",
+       "  <th>Time:</th>                 <td>08:26:17</td>     <th>  Log-Likelihood:    </th> <td> -10752.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 19807</td>      <th>  AIC:               </th> <td>2.183e+04</td>\n",
@@ -3222,8 +3229,8 @@
        "Dep. Variable:                  price   R-squared:                       0.822\n",
        "Model:                            OLS   Adj. R-squared:                  0.821\n",
        "Method:                 Least Squares   F-statistic:                     560.1\n",
-       "Date:                Wed, 31 Aug 2022   Prob (F-statistic):               0.00\n",
-       "Time:                        07:32:47   Log-Likelihood:                -10752.\n",
+       "Date:                Thu, 01 Sep 2022   Prob (F-statistic):               0.00\n",
+       "Time:                        08:26:17   Log-Likelihood:                -10752.\n",
        "No. Observations:               19807   AIC:                         2.183e+04\n",
        "Df Residuals:                   19644   BIC:                         2.312e+04\n",
        "Df Model:                         162                                         \n",
@@ -3453,16 +3460,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Separating our Dataset for prediction, without any transformation\n",
-    "y = df_pred['price']\n",
-    "X = df_pred.drop(['id', 'date', 'price', 'yr_renovated', 'zipcode', 'city_town'], axis = 1)\n",
+    "#Setting the final DataFrame as 'data_pred', using the same dictionary technique as above. I could have used the same\n",
+    "#dictionary but it is safer to run it again\n",
+    "dict_col_pred = {}\n",
+    "for label, content in df_pred.items():\n",
+    "    dict_col_pred[label] = \"\".join(label.split('.'))\n",
+    "\n",
+    "#Now removing spaces\n",
+    "for keys, value in dict_col_pred.items():\n",
+    "    dict_col_pred[keys] = '_'.join(value.split())\n",
+    "\n",
+    "#Changing the name of the last column that could yield some problem\n",
+    "dict_col_pred['city_town_Union Hill-Novelty Hill'] = 'city_town_Union_Hill_Novelty_Hill'\n",
+    "\n",
+    "#Setting the final DataFrame as 'data'\n",
+    "data_pred = df_pred.rename(columns = dict_col)\n",
+    "\n",
+    "#Setting X and y variables\n",
+    "y = data_pred['price']\n",
+    "X = data_pred.drop(['id', 'date', 'price', 'yr_renovated', 'zipcode', 'city_town', 'sqft_basement'], axis = 1)\n",
     "\n",
     "#For the train_test_split function, I keep the settings to default: 75% train, 25% test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 28)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using FunctionTransformer - both train and test (X and y)\n",
+    "log_transform = FunctionTransformer(np.log, validate = True)\n",
+    "\n",
+    "#Defining columns to be transformed - TRAIN DATA\n",
+    "log_cols = ['sqft_living', 'sqft_lot', 'sqft_living15', 'sqft_lot15', 'sqft_above']\n",
+    "\n",
+    "#New col names - TRAIN DATA\n",
+    "log_cols_adj = ['ln_sqft_liv', 'ln_sqft_lot','ln_sqft_liv15', 'ln_sqft_lot15', 'ln_sqft_abov']\n",
+    "\n",
+    "#Log transform the training columns and convert them into a DataFrame - TRAIN DATA\n",
+    "X_train_log = pd.DataFrame(log_transform.fit_transform(X_train[log_cols]), \n",
+    "                           columns = log_cols_adj, index = X_train.index)\n",
+    "\n",
+    "#Replacing training columns with adjusted - TRAIN DATA\n",
+    "X_train = pd.concat([X_train.drop(log_cols, axis = 1), X_train_log], axis = 1)\n",
+    "    \n",
+    "#Now we repeat the same thing - TEST DATA \n",
+    "X_test_log = pd.DataFrame(log_transform.transform(X_test[log_cols]), \n",
+    "                          columns = log_cols_adj, index = X_test.index)\n",
+    "\n",
+    "# Replace testing columns with transformed versions\n",
+    "X_test = pd.concat([X_test.drop(log_cols, axis = 1), X_test_log], axis = 1)\n",
+    "\n",
+    "#Transforming dependent variable - TRAIN and TEST\n",
+    "y_train = y_train.apply(lambda x: np.log(x))\n",
+    "y_test = y_test.apply(lambda x: np.log(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After splitting our dataset intro train and test - using default settings (75% train - 25% test) we apply the log transformation. In the prediction case, since we are not interest in causal analysis and coefficient point estimates, the scaling procedures is not necessary to be applied on our variables.\n",
+    "\n",
+    "After the log transformation is performed, I provide an example of the prediction baseline model. We can see that its performance is suboptimal. The mean squared error is very high using testing data. That means that we are not predicting well enough the pattern of prices and could be overfitting. More distinctively, the model is presenting a good at working with training data, however it fails to generalize to test portion (bias-variance trade-off).\n",
+    "\n",
+    "Since our model is oversaturated with dummy variables, I assume these could be affecting the overfitting of our model. Lets check!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error - Train: 0.04986738325921096\n",
+      "Mean Squared Error - Test: 3.1101070845923407e+20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calling the LinearRegression from sklearn\n",
+    "linreg = LinearRegression()\n",
+    "\n",
+    "#Fitting our regression - TRAIN DATA\n",
+    "linreg.fit(X_train, y_train)\n",
+    "\n",
+    "#Generating predictions\n",
+    "y_hat_train = linreg.predict(X_train)\n",
+    "y_hat_test = linreg.predict(X_test)\n",
+    "\n",
+    "#Mean-Squared Error\n",
+    "train_mse = mean_squared_error(y_train, y_hat_train) \n",
+    "test_mse = mean_squared_error(y_test, y_hat_test)\n",
+    "\n",
+    "#Printing out our results\n",
+    "print('Mean Squared Error - Train:', train_mse)\n",
+    "print('Mean Squared Error - Test:', test_mse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After excluding several categorical variables, specially the list of year built it is clear that we are able to obtain a better predictive model. The Mean Squared Error for Training data increases, but at the same time the MSE for our Testing data falls considerable. The MSE estimate is pretty close one another(Train 0.065 vs Test 0.070), indicating a good balance between Bias and Variance, that is, our model is not overfitting and is able to provide good estimates with testing data!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error - Train: 0.06490549559292746\n",
+      "Mean Squared Error - Test: 0.07027063291089665\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dropping categorical that are still insignificant so we don't oversaturate our model\n",
+    "#Other categorical variables that are skewed towards a particular value are dropped as well\n",
+    "X_train_d = X_train.drop(['bathrooms_10', 'bathrooms_125', 'bathrooms_15', 'view_EXCELLENT',\n",
+    "                         'view_FAIR', 'view_GOOD', 'view_NONE', 'condition_Fair', 'condition_Good',\n",
+    "                         'condition_Poor', 'condition_Very_Good', 'renovated',\n",
+    "                         'grade_11_Excellent', 'grade_12_Luxury', 'grade_13_Mansion', 'grade_4_Low',\n",
+    "                          'grade_8_Good', 'grade_5_Fair', 'grade_6_Low_Average', 'grade_7_Average',\n",
+    "                          'grade_9_Better'\n",
+    "                         ], axis = 1)\n",
+    "\n",
+    "X_test_d = X_test.drop(['bathrooms_10', 'bathrooms_125', 'bathrooms_15', 'view_EXCELLENT',\n",
+    "                         'view_FAIR', 'view_GOOD', 'view_NONE', 'condition_Fair', 'condition_Good',\n",
+    "                         'condition_Poor', 'condition_Very_Good', 'renovated',\n",
+    "                         'grade_11_Excellent', 'grade_12_Luxury', 'grade_13_Mansion', 'grade_4_Low',\n",
+    "                          'grade_8_Good', 'grade_5_Fair', 'grade_6_Low_Average', 'grade_7_Average',\n",
+    "                          'grade_9_Better'], axis = 1)\n",
+    "\n",
+    "#Now creating a yr_built filter, from \n",
+    "#https://stackoverflow.com/questions/19071199/drop-columns-whose-name-contains-a-specific-string-from-pandas-dataframe\n",
+    "yr_built = [col for col in X_train_d.columns if col[:8] == 'yr_built']\n",
+    "X_test_d = X_test_d.drop(yr_built, axis = 1)\n",
+    "X_train_d = X_train_d.drop(yr_built, axis = 1)\n",
+    "\n",
+    "#Calling the LinearRegression from sklearn\n",
+    "linreg = LinearRegression()\n",
+    "\n",
+    "#Fitting our regression - TRAIN DATA\n",
+    "linreg.fit(X_train_d, y_train)\n",
+    "\n",
+    "#Generating predictions\n",
+    "y_hat_train = linreg.predict(X_train_d)\n",
+    "y_hat_test = linreg.predict(X_test_d)\n",
+    "\n",
+    "#Mean-Squared Error\n",
+    "train_mse = mean_squared_error(y_train, y_hat_train) \n",
+    "test_mse = mean_squared_error(y_test, y_hat_test)\n",
+    "\n",
+    "#Printing out our results\n",
+    "print('Mean Squared Error - Train:', train_mse)\n",
+    "print('Mean Squared Error - Test:', test_mse)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
    ]
   },
   {
