Another commit, finishing touches before the presentation

--- a/student.ipynb
+++ b/student.ipynb
@@ -18,7 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction"
+    "## Overview\n",
+    "I investigate a dataset of housing prices in King County - WA. Using a regression framework, under two specific settings: causal and prediction I delineate which factors are the most relevant to housing prices and how can one accurately predict the price of a real state in King County.\n",
+    "\n",
+    "## Business Understanding\n",
+    "The purchase of a house is one of the biggest investments that one could make. House as an asset is deeply ingrained in our culture. As such, the relevance of point out which features are the most representative when assessing a property's value are paramount.\n",
+    "\n",
+    "I argue that the housing price analysis is relevant for a wide array of audiences, such as: realtors, constructors, investment agents and the general public that have an interest or live in the King County area."
    ]
   },
   {
@@ -3635,7 +3641,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "## Conclusion\n",
+    "In this project I worked with housing data from King County - WA. After cleaning the data and performing a preliminary overview, I provide two regression framework analysis using the dataset. The first one is a causal inference approach, where I explain 82% of housing price variation using a combination of numerical an categorical variables.\n",
+    "\n",
+    "Starting with a baseline model, sqft_living is the numerical variable that is correlated the most with prices. From there, we add several numerical and categorical variables. The variables that have the greater impact on housing prices are: the squarefeet of the living area and the lot, whether a house was renovated, has an excellent view and it is in excellent condition too. If the property is a recently built 2.5-floored mansion, with fewer bedrooms and 3 bathrooms located in Mercer Island will have the highest price. In order to find the precise location of a property, I combine geolocation data with our dataset.\n",
+    "\n",
+    "After concluding our causal approach, I provide a prediction framework. We see that using our fully saturated model while being fully useful in a causal approach unfortunately will not yield a good prediction using testing data. Then I adapt the model, skimming categorical variables then reaching a good balance between Mean Squared Errors from Training and Testing data (bias-variance trade-off).\n",
+    "\n",
+    "### Potential Pitfalls and Further Research\n",
+    "It is worth noting that we see the regression framework failing to hold the normality assumption, so it could be the case the sample was not randomly drawn. From inspecting our dataset, it is clear that there is a profusion of properties within the Seattle area. Besides that, other assumptions are held (linearity, multicollinearity and homoskedasticity). \n",
+    "\n",
+    "Further research could try expanding the dataset, aggregating demographics from each area and the use of other numerical variables. Also the use of polynomial features in order to capture the behavior of housing prices is indicated."
    ]
   },
   {
